...
                android:id="@+id/ivToast"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pineapple_confused" />

            <TextView
                android:id="@+id/tvMessage"
                style="@style/TodoStyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small"
                android:textColor="@color/colorBlack" />
...
