<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTimeToNext"
            style="@style/TodoStyleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/time_to_next_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tcClock" />

        <ImageView
            android:id="@+id/ivCurrentlyDrinking"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="@id/tvTimeToNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTimeToNext"
            app:layout_constraintTop_toTopOf="@id/tvTimeToNext" />

        <TextView
            android:id="@+id/tcClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/colorBlack"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="11:00" />

        <ImageView
            android:id="@+id/ivCountDownPineapple"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="@dimen/margin_large"
            android:src="@drawable/ic_pineapple_smile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tcClock" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clNumOfUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_extraLarge"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@drawable/card_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCountDownPineapple">

            <TextView
                android:id="@+id/tvAlcoholCount"
                style="@style/TodoStyleText"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/countdown_drinks_so_far"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartBac"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clNumOfUnits" />

        <Button
            android:id="@+id/bStopDrinking"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_margin="@dimen/margin_large"
            android:textAllCaps="false"
            android:visibility="gone"
            android:background="@drawable/button_selector"
            android:text="@string/stop_drinking"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chartBac" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>