...
    <string name="info_how_calculator_title">How does the calculator work?</string>
    <string name="info_how_calculator_text">The number of grams of alcohol needed to achieve a certain blood alcohol content (BAC) can be calculated by using ones biological gender and weight. This app uses the Widmark-Forumla as the basis for the computation, solving for the number of units needed based on wanted BAC and estimated time. \n\n This gives the following equation:\n Needed Grams = (BA
    <string name="info_custom_drinks_title">Can I add my favorite drinks to the app?</string>
    <string name="info_custom_drinks_text">Sure! Go to Profile and you can add as many drinks as you want. When selecting the metrics for alcohol, make sure you don’t count the volume of non-alcohol beverages such as soda.</string>
    <string name="info_why_not_more_title">Why does the Blood Alcohol Content bar stop at 0.15%?</string>
    <string name="info_why_not_more_text">Legal reason? Moral reasons? Nah, really, if you want to get drunk I bet you won’t need app for that. This app it to help out those looking for more controlled fun.</string>
    <string name="countdown_drinking_clock_not_started">00:00</string>
    <string name="profile_update">Update profile</string>
    <string name="startdrinking_what_will_you_drink">What will you be drinking?</string>
    <string name="timer">Timer</string>
    <string name="countdown_estimated_bac">Estimated BAC during your night</string>
    <string name="startdrinking_peak_time">When do you want to reach your BAC target?</string>
    <string name="stop_drinking">Stop drinking</string>
...
